adding loop with mpmc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ tokio-timer = "0.1"
 bytes = "0.4"
 mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
 quick-error = "1.2"
+multiqueue = "0.3"
 log = "0.3"
